Issue #1437 Options overflow, Issue #1471 farmware tooltips, and image container fix

--- a/frontend/css/global.scss
+++ b/frontend/css/global.scss
@@ -1432,6 +1432,16 @@ ul {
   }
 }
 
+.dynamic-column{
+  display: flex;
+  .location-form, .expandable-header{
+    padding-left: 15px;
+  }
+  .expandable-header{
+    padding-right: 15px;
+  }
+}
+
 textarea {
   border: 0;
   padding: 6px 8px;
